--- a/Ejercicios_M7_1/M7.1_Ex7_Dibuixa_Un_Quadrat.html
+++ b/Ejercicios_M7_1/M7.1_Ex7_Dibuixa_Un_Quadrat.html
@@ -22,8 +22,8 @@
             let areaQuadrat = "";
             let i = 0;
             let j = 0;
-                for (i = 0; i <= mesuraUsuari; i++){
-                    for (j = 0; j <= mesuraUsuari; j++){
+                for (i = 1; i <= mesuraUsuari; i++){
+                    for (j = 0; j < mesuraUsuari; j++){
                         areaQuadrat += simbolUsuari + " ";
                     }; 
                 areaQuadrat += "<br>";
