--- a/Ejercicios_M8_2/M8.2_Ex3_Clients_i_Vols/index.html
+++ b/Ejercicios_M8_2/M8.2_Ex3_Clients_i_Vols/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CLients i Vols</title>
-    <script src="./js/claseClients.js"></script>
-    <script src="./js/claseVols.js"></script>
+    <script src="./js/claseClient.js"></script>
+    <script src="./js/claseVol.js"></script>
+    <script src="./js/arrayClients.js"></script>
     <script src="./js/crud.js"></script>
     <details style="background-color: rgb(248, 200, 79)">
       Modifica les classes Client i Vol, perquè responguin al diagrama de
