--- a/Ejercicios_M7_3/M7.3_Ex7_BotigadeSurf/M7.3_Ex7_Botiga_de_Surf.html
+++ b/Ejercicios_M7_3/M7.3_Ex7_BotigadeSurf/M7.3_Ex7_Botiga_de_Surf.html
@@ -33,6 +33,6 @@
     >
       Accede al menú
     </button>
-    <script src="./js/main3.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
