--- a/Ejercicios_M7_1/M7.1_Ex5_Parells_Fins_100.html
+++ b/Ejercicios_M7_1/M7.1_Ex5_Parells_Fins_100.html
@@ -18,7 +18,7 @@
             for (i = 100; i >= 0; i-=2){
                 parells += i + "<br>";
                 };
-            document.getElementById("mensaje").innerHTML = "Els següents numeros són els parells" + parells;
+            document.getElementById("mensaje").innerHTML = "Els següents numeros són els parells <br>" + parells;
         }
         
 </script>
